--- a/01-Week/03-Day/07-RelativePaths-Activity/Unsolved/RelativePaths_3/html-bio.html
+++ b/01-Week/03-Day/07-RelativePaths-Activity/Unsolved/RelativePaths_3/html-bio.html
@@ -8,17 +8,14 @@
 
   <!-- Fill in the href to the CSS such that this HTML file can access the CSS -->
   <!-- Don't move the HTML or CSS file. Use Relative Linking -->
-  <link rel="stylesheet" type="text/css" href="???????????">
-</head>
-
+  <link rel="stylesheet" type="text/css" href="assets/style/style.css">
 <body>
   <header>
     <h1>Student Bio</h1>
   </header>
 
   <div class="container">
-
-    <section id="main-bio">
+<section id="main-bio">
 
       <h2>Your Name</h2>
 
