--- a/01-Week/03-Day/07-RelativePaths-Activity/Unsolved/RelativePaths_4/HTML/html-bio.html
+++ b/01-Week/03-Day/07-RelativePaths-Activity/Unsolved/RelativePaths_4/HTML/html-bio.html
@@ -8,7 +8,7 @@
 
   <!-- Fill in the href to the CSS such that this HTML file can access the CSS -->
   <!-- Don't move the HTML or CSS file. Use Relative Linking -->
-  <link rel="stylesheet" type="text/css" href="../styles.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
